--- a/framework/dependencies.yml
+++ b/framework/dependencies.yml
@@ -9,7 +9,7 @@ transitiveDependencies: false
 require:    &allDependencies
     - antlr 2.7.6
     - c3p0 0.9.1.2
-    - cglib -> cglib-nodep 2.2
+    - cglib -> cglib-nodep 3.1
     - com.google.code.gson -> gson 1.7.1
     - com.jamonapi -> jamon 2.7
     - com.ning -> async-http-client 1.6.3
@@ -43,12 +43,12 @@ require:    &allDependencies
     - org.apache.ivy -> ivy 2.2.0
     - org.bouncycastle -> bcprov-jdk15 1.45
     - org.codehaus.groovy -> groovy-all 1.7.10
-    - org.eclipse.jdt.core 3.6.0
+    - org.eclipse.jdt.core 3.10.0
     - org.hibernate -> hibernate-core 3.6.1.Final
     - org.hibernate -> hibernate-commons-annotations 3.2.0.Final
     - org.hibernate -> hibernate-entitymanager 3.6.0.Final
     - org.hibernate.javax.persistence -> hibernate-jpa-2.0-api 1.0.0.Final
-    - org.javassist -> javassist 3.9.0.GA
+    - org.javassist -> javassist 3.18.1-GA
     - org.jboss.netty -> netty 3.2.4.Final
     - org.postgresql -> postgresql 9.0
     - org.slf4j -> slf4j-api 1.6.1
